# do-it-2mrw

./: .gitignore  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
native-addon/: CMakeLists.txt  binding.gyp  package.json  pnpm-lock.yaml
native-addon/include/: task.h  test.h
native-addon/js/: index.js
native-addon/src/: addon.cpp  task.cpp  test.cpp
src/main/windows/: main.ts
src/preload/: index.ts
src/renderer/screens/: main.tsx
test/: addon_test.js
